# UnitreeDOG_XU

./: README.md
catkin_ws/: run.sh  run1.sh  run2.sh  runcode.sh
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/lib/pkgconfig/: ser_package.pc
catkin_ws/devel/lib/ser_package/: ser_package
catkin_ws/devel/share/ser_package/cmake/: ser_packageConfig.cmake
catkin_ws/src/ser_package/: CMakeLists.txt
catkin_ws/src/ser_package/Inc/: AutoControl.h  Console.h  Controller.h  Gait.h  Kinematics.h  LegController.h  LegMotors.h  PacePlanner.h  Record.h  ser.h
catkin_ws/src/ser_package/Src/: AutoControl.cpp  Console.cpp  Controller.cpp  Hops.cpp  LegController.cpp  LegMotors.cpp  PacePlanner.cpp  Record.cpp  Sensor.cpp  main.cpp  ser.cpp
catkin_ws/src/ser_package/log/: log.txt
catkin_ws/src/ser_package/motor/Inc/: IOPort.h  motor_control.h
catkin_ws/src/ser_package/simluator/: hop_curve.py  main.py  realtime.py
new/: CMakeLists.txt
new/Inc/: AutoControl.h  Connector.h  Console.h  Controller.h  Debug.h  InitAngle.h  MultiThread.h  PacePlanner.h  Record.h  Sensor.h
new/Src/: AutoControl.cpp  Connector.cpp  Console.cpp  Controller.cpp  Debug.cpp  Gait.cpp  Hops.cpp  InitAngle.cpp  Kinematics.cpp  LegMotors.cpp  PacePlanner.cpp  Record.cpp  main.cpp
new/envirenment/: run.sh
new/log/: record.txt
new/motor/Inc/: CRC32.h  SerialPort.h  motor_msg.h  unitreeMotor.h
new/motor/Src/: motor_control.cpp
new/simluator/: hop_curve.py  main.py
